--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+			<link rel="icon" href="favicon.ico" />
 
 		<!-- Wrapper -->
 			<div id="wrapper">
